force-app/main/default/objects/Cardknox_Creds__c/Cardknox_Creds__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to store the Card-Knox Creds for integration</description>
    <label>Cardknox Creds</label>
</CustomObject>