force-app/main/default/objects/Cardknox_Creds__c/fields/SB_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>SB_Base_URL__c</fullName>
    <label>SB Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>