force-app/main/default/objects/Cardknox_Creds__c/fields/SB_Transaction_URl__c.field-meta.xml
<CustomField>
    <fullName>SB_Transaction_URl__c</fullName>
    <label>SB Transaction URl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>