force-app/main/default/objects/Cardknox_Creds__c/fields/SB_xKey__c.field-meta.xml
<CustomField>
    <fullName>SB_xKey__c</fullName>
    <label>SB xKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>