force-app/main/default/objects/Cardknox_Creds__c/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <label>Software Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>