force-app/main/default/objects/Cardknox_Creds__c/fields/Transaction_URL__c.field-meta.xml
<CustomField>
    <fullName>Transaction_URL__c</fullName>
    <label>Transaction URl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>