force-app/main/default/objects/Cardknox_Creds__c/fields/xKey__c.field-meta.xml
<CustomField>
    <fullName>xKey__c</fullName>
    <label>xKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>